# meal

./: .gitignore  README.md  app.json  package-lock.json  package.json
.claude/: settings.local.json
backend/: .env.example  .env.local  Procfile  README.md  app.json  data  freefood.db  local.db  manage.py  pyproject.toml  requirements.txt  test_interactions_endpoints.py  test_menu_endpoints.py
backend/data/cache/: locations.json
backend/data/cache/2026-02-06/: menu_items.json  menus.json
backend/data/cache/2026-02-07/: menu_items.json  menus.json
backend/data/cache/2026-02-08/: menu_items.json  menus.json
backend/data/cache/2026-02-09/: menu_items.json  menus.json
backend/data/cache/2026-02-10/: menu_items.json  menus.json
backend/endpoint_responses/20260105_065325/: all_dining_locations.txt  dining_locations_category_2.txt  dining_locations_category_3.txt  menu_1.txt  menu_2.txt  menu_item_1.txt  menu_item_2.txt  menu_items_1.txt  menu_items_2.txt  menus_locations_1.txt  menus_locations_2.txt  menus_locations_day_1.txt  menus_locations_day_2.txt  menus_locations_days_1.txt  menus_locations_days_2.txt
backend/endpoint_responses/20260105_065614/: all_dining_locations.txt  dining_locations_category_2.txt  dining_locations_category_3.txt  menu_1.txt  menu_2.txt  menu_item_1.txt  menu_item_2.txt  menu_items_1.txt  menu_items_2.txt  menus_locations_1.txt  menus_locations_2.txt  menus_locations_day_1.txt  menus_locations_day_2.txt  menus_locations_days_1.txt  menus_locations_days_2.txt
backend/endpoint_responses/20260105_081233/: 01_get_menu_item_metrics_initial.txt  02_get_user_menu_item_interaction_initial.txt  03_record_user_menu_item_view.txt  04_update_user_menu_item_interaction_like.txt  05_update_user_menu_item_interaction_favorite.txt  06_update_user_menu_item_interaction_saved.txt  07_update_user_menu_item_interaction_would_eat_again_yes.txt  08_get_user_menu_item_interaction_after_updates.txt  09_get_menu_item_metrics_after_interactions.txt  10_update_user_menu_item_interaction_dislike.txt  11_record_user_menu_item_view_again.txt  12_get_user_menu_item_interaction_final.txt  13_get_menu_item_metrics_final.txt
backend/endpoint_responses/20260105_141655/: 01_get_menu_item_metrics_initial.txt
backend/hoagiemeal/: __init__.py  asgi.py  logger.py  models.py  serializers.py  settings.py  urls.py  utils.py  wsgi.py
backend/hoagiemeal/ai/: README.md  __init__.py  completions.py  models.py  tools.py
backend/hoagiemeal/api/: README.md  __init__.py  auth.py  cacher.py  courses.py  database.py  dining.py  engagement.py  events.py  interactions.py  locations.py  menu.py  places.py  recommend.py  recommendations.py  schemas.py  scraper.py  student_app.py  test.py  user.py
backend/hoagiemeal/api/services/: __init__.py  cacher.py  engagement.py  recommend.py  scraper.py  user.py
backend/hoagiemeal/api/views/: __init__.py  cacher.py  engagement.py  freefood.py  recommend.py  user.py
backend/hoagiemeal/archives/: menus.json  menus.py
backend/hoagiemeal/management/: README.md  __init__.py
backend/hoagiemeal/management/commands/: __init__.py  compute_menu_item_similarity.py  seed_interactions.py  test_dining.py  test_places.py
backend/hoagiemeal/migrations/: 0001_initial.py  0002_alter_residentialmenu_meal.py  0002_freefoodalert.py  0002_remove_diningvenue_operation_hours_and_more.py  0002_remove_menuitem_description.py  0002_rename_preferred_dining_halls_userdietaryprofile_preferred_dining_venues.py  0003_alter_menuitemnutrition_serving_size.py  0003_menuitemnutrition_and_more.py  0003_remove_diningvenue_category_id.py  0003_remove_userdietaryprofile_preferred_dining_venues.py  0004_alter_menuitem_name.py  0004_diningvenue_category_id.py  0004_menuiteminteraction_menuitemmetrics_and_more.py  0004_remove_menu_menus_dining__9d8f78_idx_and_more.py  0005_alter_menuitemnutrient_menu_item_and_more.py  0005_menuitemsimilarity.py  0005_remove_diningvenue_id_alter_diningvenue_database_id.py  0005_remove_menuiteminteraction_first_viewed_at_and_more.py  0006_alter_menuiteminteraction_would_eat_again.py  0006_menuitemnutrient_created_at.py  0006_remove_menuitem_menu_menu_menu_items.py  0007_alter_menuitemnutrition_serving_unit.py  0007_customuser_auth0_id.py  0007_remove_menuitem_allergens_and_more.py  0008_alter_diningvenue_category_id_and_more.py  0008_customuser_allergens.py  0009_customuser_dining_halls.py  0010_add_dietary_fields_safe.py  0011_menuitembookmark_menuitemupvote_and_more.py  0012_remove_customuser_bookmarked_menu_items_and_more.py  0013_customuser_show_nutrition_menuitem_dietary_flags_and_more.py  0014_menuitem_dietary_flags_menuitem_is_halal_and_more.py  0015_delete_banditmodel_delete_explanationtemplate_and_more.py  0016_remove_usergoal_user_remove_usermeallog_menu_item_and_more.py  0017_remove_usermealplan_user_and_more.py  0018_remove_userpreferencesnapshot_user_and_more.py  0019_remove_swipetransactionmarketplace_listing_and_more.py  0020_remove_menuiteminterest_interest_and_more.py  0021_remove_experimentmetriclog_experiment_and_more.py  0022_remove_userachievement_achievement_and_more.py  (+6 more)
backend/hoagiemeal/models/: __init__.py  achievement.py  dining.py  engagement.py  experiment.py  free_food.py  interest_graph.py  managers.py  marketplace.py  meal_plan.py  menu.py  menu_item.py  nutrition.py  recommendation.py  user.py
backend/hoagiemeal/recommendations/: README.md
backend/hoagiemeal/tests/: README.md  __init__.py  dining_api.py  dining_events.py
backend/hoagiemeal/utils/: README.md  archiver.py  data.py  deprecated.py  dietary.py  dining.py  logger.py  menu.py  scraper.py
backend/scripts/: analyze_menu_stats.py  run_dining_test.sh  seed_menus.py  seed_menus_init.py
frontend/: .env.example  .env.local.example  .eslint.config.ts  classes.ts  data.ts  locations.ts  middleware.ts  next.config.mjs  ordering.ts  package-lock.json  package.json  postcss.config.js  postcss.config.mjs  postcss.config.ts  styles.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  types.ts
mobile/: App.tsx  app.json  package-lock.json  package.json
(+235 files in other folders)
