[project]
name = "hoagiemeal"
version = "0.0.1"
description = "Meal by Hoagie"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}

authors = [
    { name = "Hoagie Club", email = "hoagie@princeton.edu" },
]

maintainers = [
    { name = "Hoagie Club", email = "hoagie@princeton.edu" }
]

keywords = [
    "nutrient app",
    "nutrient tracker",
    "food diary",
    "meal planner",
    "diet tracker",
    "nutrient calculator",
    "healthy eating",
    "balanced diet",
    "food logging",
    "dietary management",
    "allergen tracker",
    "dietary restrictions",
    "dietary recommendations",
    "campus dining",
    "student wellness",
    "student nutrition",
    "calorie counting",
    "macro tracking",
    "meal logging",
    "goal setting",
    "progress tracking",
    "meal recommendations",
    "healthy habits",
    "progressive web app",
    "full stack web app",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix"
]

dependencies = [
    "requests>=2.32.3",
    "django>=5.1",
    "msgspec>=0.18.6",
    "python-dotenv>=1.0.1",
    "colorama>=0.4.6",
    "xmlschema>=3.4.2",
    "icalendar>=6.0.1",
    "lxml>=5.3.0",
    "beautifulsoup4>=4.12.3",
]

[tool.setuptools]
packages = ["hoagiemeal"]

# ===============================
# Project URLs
# ===============================
[project.urls]
Homepage = "https://meal.hoagie.io/"
Repository = "https://github.com/hoagieclub/meal/"

# ===============================
# Ruff Configuration
# ===============================
[tool.ruff]
# Exclude commonly ignored directories from linting
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# General Ruff settings
line-length = 119
indent-width = 4
target-version = "py312"

# -------------------------------
# Ruff Linting Rules
# -------------------------------
[tool.ruff.lint]
# Enable specific linting rules
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = []

# Define fixable and unfixable rules
fixable = ["ALL"]
unfixable = []

# -------------------------------
# Ruff Flake8-Quotes Settings
# -------------------------------
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"  # Enforce double quotes for docstrings
inline-quotes = "double"     # Enforce double quotes for inline strings

# -------------------------------
# Ruff Formatting Settings
# -------------------------------
[tool.ruff.format]
quote-style = "double"                  # Use double quotes for auto-formatting
indent-style = "space"                  # Indent with spaces instead of tabs
skip-magic-trailing-comma = false       # Respect magic trailing commas
line-ending = "auto"                    # Automatically detect line endings

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
